compiler/tests/en/errors/compound_assign_percent_float.salam
// EXPECT: E021
func main:
    mut f := 5.0
    f %= 2.0
end
